--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,26 @@
    
     <title>Pizza Shop</title>
   </head>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyAYed7faoxIm1er3T_Js4g-TH-4h3Yg9v4",
+    authDomain: "pizza-shop-60b3c.firebaseapp.com",
+    databaseURL: "https://pizza-shop-60b3c.firebaseio.com",
+    projectId: "pizza-shop-60b3c",
+    storageBucket: "pizza-shop-60b3c.appspot.com",
+    messagingSenderId: "923324140289",
+    appId: "1:923324140289:web:22a6b474c391c42dece900"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
