set up new config

--- a/public/index.html
+++ b/public/index.html
@@ -30,20 +30,30 @@
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
+<script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+     <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
+
+     <!-- TODO: Add SDKs for Firebase products that you want to use
+          https://firebase.google.com/docs/web/setup#available-libraries -->
+     
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyCeuqv9rsM_eWP48t3JvvYyumkq4YJAK6g",
-    authDomain: "phillips-pizza-shop.firebaseapp.com",
-    databaseURL: "https://phillips-pizza-shop.firebaseio.com",
-    projectId: "phillips-pizza-shop",
-    storageBucket: "phillips-pizza-shop.appspot.com",
-    messagingSenderId: "1010566902264",
-    appId: "1:1010566902264:web:3212832fb09ba5d35a660d"
+    apiKey: "AIzaSyBH8o4DBE9_AerjktKworsgQ8Nwy-3UALc",
+    authDomain: "pizzashop-87689.firebaseapp.com",
+    databaseURL: "https://pizzashop-87689.firebaseio.com",
+    projectId: "pizzashop-87689",
+    storageBucket: "pizzashop-87689.appspot.com",
+    messagingSenderId: "912871357189",
+   appId: "1:912871357189:web:3a8be90165c10d9cc1956c"
   };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-</script>
+       // Initialize Firebase
+       firebase.initializeApp(firebaseConfig);
+     </script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
